# anomaly-detection-challenges

./: .gitignore  .gitmodules  EXPERIMENT_REPORT.md  PROJECT_STATUS.md  Verification Handbook v3.md  Verification handbook.md  setup_subprojects.py  开销挑战验证方案_评估与通用化改写.docx
Preliminary research for different model/: 工业异常检测调研.xlsx  工业物品表面缺陷检测算法调研.docx  工业表面缺陷检测论文调研.xlsx  布匹瑕疵检测技术报告.docx
analysis/: compare_models.py  rerun_efficientad_c4c5.py  rerun_m2_n2_only.py  run_remaining_tests.py
benchmark_suite/: PROGRESS.md  README.md  requirements.txt  run.py
benchmark_suite/common/: __init__.py  bench_utils.py  compat.py  datasets.py  env.py  models.py  prepare.py  registry.py  report.py  result.py  runtime.py
benchmark_suite/communication/: __init__.py  n1_model_sync.py  n2_event_callback.py  n3_hard_realtime.py
benchmark_suite/compute/: __init__.py  c1_power_thermal.py  c2_resolution_sweep.py  (+4 more)
datasets/: download_dataset.py
models/anomaly_detection_for_textile_industry/: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  inference.py  launch.ipynb  main.py  pyproject.toml  requirements.txt
models/anomaly_detection_for_textile_industry/src/: __init__.py  anomaly_ead.py  anomaly_patchcore.py  anomaly_pipeline.py  anomaly_supersimplenet.py  benchmarking.py  config.py  dataset_utils.py  eda.py  hyperparameter_optimization_efficientad.py  hyperparameter_optimization_patchcore.py  metrics.py  transfer_learning.py  utils.py  visualization.py
models/anomaly_detection_for_textile_industry/tests/: test_dynamic_crop.py  test_memory.py  test_rename_logic.py
(+34 files in other folders)
