[project]
name = "anomaly-detection-for-textile-industry"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Emanuele Pietro Cometti", email = "emanuelecometti@hotmail.it"}
]
requires-python = ">=3.12, <3.14.1"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "wandb (>=0.25.1,<0.26.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "anomalib (>=2.2.0,<3.0.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "optuna (>=4.8.0,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch @ https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp312-cp312-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu130/torchvision-0.26.0%2Bcu130-cp312-cp312-win_amd64.whl",
    "albumentations (>=2.0.8,<3.0.0)",
    "onnx (>=1.21.0,<2.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "onnxruntime-gpu (>=1.27.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"